Fix margins/widths with top-menu and main-col on small screens

--- a/client/src/app/+my-account/my-account-settings/my-account-notification-preferences/my-account-notification-preferences.component.scss
+++ b/client/src/app/+my-account/my-account-settings/my-account-notification-preferences/my-account-notification-preferences.component.scss
@@ -15,7 +15,12 @@
   }
 
   & > div {
+    padding: 10px;
     width: 350px;
+
+    &:nth-child(2) {
+      max-width: 60px !important;
+    }
 
     @media screen and (max-width: $small-view) {
       width: auto;
@@ -25,9 +30,4 @@
       }
     }
   }
-
-  & > div {
-    padding: 10px
-  }
 }
-
