--- a/client/src/app/+my-account/my-account-settings/my-account-profile/my-account-profile.component.scss
+++ b/client/src/app/+my-account/my-account-settings/my-account-profile/my-account-profile.component.scss
@@ -25,6 +25,7 @@ input[type=submit] {
 
 textarea {
   @include peertube-textarea(500px, 150px);
+  max-width: 100%;
 
   display: block;
 }
