--- a/client/src/app/+my-account/my-account-settings/my-account-settings.component.scss
+++ b/client/src/app/+my-account/my-account-settings/my-account-settings.component.scss
@@ -16,4 +16,5 @@
 
 .progress {
   width: 500px;
+  max-width: 100%;
 }
