--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -8,6 +8,7 @@
 .sub-header-container {
   margin-top: $header-height;
   background-color: var(--mainBackgroundColor);
+  width: 100%;
 }
 
 .header {
